# longitudinal

./: .gitignore  Eunice_FinalModel.ipynb  README.md  heredity_analysis_A&B.ipynb  project_model_Eunice.ipynb  pyproject.toml
kaggle/data/: gen1_test_comp_final.csv  gen1_train_comp_final.csv  gen2_test_solution_template.csv  gen2_test_upto9_comp_final.csv  gen2_train_comp_final.csv
kaggle/models/: project (1).ipynb  project.ipynb
kaggle/settings/: constants.py
longitudinal/models/: Qc.ipynb  Qd.ipynb  checkit.csv  investigation.ipynb  lagged_tree_regressor.ipynb  multioutput.ipynb  new.ipynb  preprocessing.ipynb  project.ipynb  project_model_Eunice.ipynb  project_wh.ipynb  stacked_tree_preds_wh.ipynb  test_predictions.csv  train.ipynb  wh_stacked_submission.csv  wh_xgboost_submission.csv  wh_xgboost_submission_2.csv
longitudinal/settings/: constants.py
